--- a/index.html
+++ b/index.html
@@ -15,22 +15,26 @@
 
 <body>
     <header>
-        <div class="container row">
+        <div class="container row2">
 
-
-            <button class="hamburger">
-                <span class="line"></span>
-                <span class="line"></span>
-                <span class="line"></span>
-            </button>
-            <a class="logo" href="#">
-                <img src="./img/logo.svg" alt="conquering responsive layouts">
-            </a>
+                <div class="open">
+                    <button class="hamburger">
+                        <span class="line"></span>
+                        <span class="line"></span>
+                        <span class="line"></span>
+                    </button>
+                    <div class="link">
+                        <a class="logo" href="#">
+                            <img src="./img/logo.svg" alt="conquering responsive layouts">
+                        </a>
+                    </div>
+                </div>
+            
             <nav class="nav">
                 <ul class="nav__list nav__list--primary">
                     <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
                     <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-                    <li class="nav__item"><a class="space"href="#" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
                 </ul>
                 <ul class="nav__list nav__list--secondary">
                     <li class="nav__item"><a href="#" class="nav__link">Sign In</a></li>
